<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!--<data>
            <variable
                name = "encuesta"
                type= "com.independenciatecnologica.encuestappdos.model.Encuesta"/>
        </data> -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginRight="20dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:hint="@string/label_name"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginLeft="20dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:hint="@string/label_lastname"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_dni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginRight="20dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:hint="@string/label_dni"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_dateBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginLeft="20dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:hint="@string/label_date"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginLeft="20dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:hint="@string/label_email"/>
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp">

            </Spinner>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/label_description"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/bt_back"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/bt_save"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/bt_edit"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>






    </LinearLayout>

</layout>
