<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="loginViewModel"
            type="com.independenciatecnologica.encuestappdos.viewModel.LoginViewModel"/>
    </data>
    <!-- -->
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.MainActivity">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/encuestapp_fondo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                android:textColor="@color/darkOrange"
                android:textSize="40sp"
                android:fontFamily="@font/felixtitling"/>


            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:errorEnabled="true"
                app:error="@{loginViewModel.errorUser}">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:hint="@string/user"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/darkOrange"
                    android:textColorLink="@color/darkOrange"
                    android:text="@={loginViewModel.user}"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColorHint="@color/darkOrchid"
                    android:shadowColor="@color/darkOrchid"
                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/pass_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.8"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:errorEnabled="true"
                app:error="@{loginViewModel.errorPass}">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:hint="@string/pass"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/darkOrange"
                    android:textColorLink="@color/darkOrange"
                    android:text="@={loginViewModel.pass}"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="@color/darkOrchid"
                    />
            </android.support.design.widget.TextInputLayout>


            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="@{loginViewModel.busy}"/>
            <Button
                android:id="@+id/bt_login"
                android:layout_width="100dp"
                android:layout_height="50dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pass_layout"
                android:layout_marginBottom="20dp"
                android:text="@string/login"
                android:background="@color/turquise"
                android:textColor="@color/darkOrchid"
                android:onClick="@{()-> loginViewModel.login()}"
                android:textStyle="bold"
                android:fontFamily="@font/gravedigger"/>


            <!-- android:background="@color/darkOrchid"-->

    </android.support.constraint.ConstraintLayout>
</layout>